syntax = "proto3";
package oplog;




import "notify_sdk/model/notify/operation_log.proto";

/*
ListOperationLog返回
*/
message ListOperationLogResponse {
    /*
    页数
    */
    int32 page = 1 ;
    /*
    页大小
    */
    int32 page_size = 2 ;
    /*
    总数
    */
    int32 total = 3 ;
    /*
    数据列表
    */
    repeated notify.OperationLog list = 4 ;
}

/*
ListOperationLogApi返回
*/
message ListOperationLogResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    oplog.ListOperationLogResponse data = 4 ;
}

